--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,24 +45,10 @@
         "scss/grid/utilities/_flex.scss",
         "scss/grid/utilities/_spacing.scss"
       ]
-    },
-    {
-      "path": "scss/grid/bootstrap-grid.scss",
-      "imports": [
-        "scss/grid/_functions.scss",
-        "scss/grid/_variables.scss",
-        "scss/grid/mixins/_breakpoints.scss",
-        "scss/grid/mixins/_grid-framework.scss",
-        "scss/grid/mixins/_grid.scss",
-        "scss/grid/_grid.scss",
-        "scss/grid/utilities/_display.scss",
-        "scss/grid/utilities/_flex.scss",
-        "scss/grid/utilities/_spacing.scss"
-      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
